--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,77 +1,13 @@
 @import './globals.css';
-@import './dropdown.css';
-
-.fretboard {
-    display: flex;
-    flex-direction: column;
-    margin: 20px auto 0;
-    width: max-content;
-    border: 2px solid silver;
-}
-
-.fretboard__wrapper {
-    max-width: 100%;
-    overflow-x: scroll;
-}
-
-.fretboard__wrapper::-webkit-scrollbar,
-.fretboard__wrapper::-webkit-scrollbar-button {
-    display: none;
-}
 
 .frets {
     display: flex;
     flex-wrap: nowrap;
 }
 
-.fret {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-left: 1px solid silver;
-    border-right: 1px solid silver;
-    padding: 3px 0;
-    position: relative;
-    
-}
-
-.fret:before {
-    position: absolute;
-    content: '';
-    top: 50%;
-    left: -1px;
-    right: -1px;
-    transform: translateY(-50%);
-    height: 2px;
-    background-color: black;
-    z-index: 0;
-}
-
-.fret:first-child {
-    background-color: beige;
-}
-
 .settings {
     display: flex;
     gap: 0.5rem;
     justify-content: center;
-}
-
-.note {
-    font-weight: 300;
-    border: 1px solid white;
-    background: var(--primary-glow);
-    border-radius: 0.25em;
-    color: white;
-    width: 16px;
-    height: 16px;
-    text-align: center;
-    font-family: var(--font-mono);
-    font-size: 0.75rem;
-    z-index: 1;
-}
-
-.note.root {
-    border-radius: 50%;
-    font-weight: 500;
+    margin: 0 auto;
 }
